test/error/UnreachableReturn.ci
public static class Test
{
	public static bool Run()
	{
		return true;
		return false; //ERROR: Unreachable statement
	}
}
